# syncthing_status

./: .gitignore  Cargo.nix  Cargo.toml  README.md  flake.nix  shell.nix
src/: api_handler.rs  config.rs  input.rs  main.rs  output.rs
src/api/: mod.rs  types.rs
