[package]
name = "syncthing_status"
version = "0.2.4"
authors = ["joooscha <joscha.loos@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.*", features = ["blocking"] }
serde_json = "1.0.48"
serde = { version = "1.0.104", features = ["derive"] }
chrono = "0.4.15"
serde_yaml = "*"
dirs-next = "2.0.0"
